<resources>
    <string name="app_name">DomiciliosServer</string>
    <string name="slogan">We transport products to customers as quicky as our ex betrays</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_off">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_network">Conexión de red no disponible</string>
    <string name="error_price_required">El campo precio es requerido</string>

    <string name="prompt_name">Nombre</string>
    <string name="prompt_description">Descripción</string>
    <string name="prompt_characteristics">Características</string>
    <string name="prompt_properties">Propiedades</string>
    <string name="prompt_price">Precio</string>
    <string name="prompt_address">Dirección</string>
    <string name="prompt_phone">Móvil</string>
    <string name="prompt_local_phone">Trabajo</string>

    <string name="title_activity_tracking_order">Map</string>
    <string name="title_activity_category">Sección</string>
    <string name="title_activity_product">ActivityProduct</string>
    <string name="provider.hint.name">Nombre</string>
    <string name="provider.hint.order">Orden</string>
    <string name="label.upload">Subir</string>
    <string name="label.select">Seleccionar</string>
    <string name="label.camera">Camara</string>
    <string name="label.gallery">Galeria</string>
    <string name="message.upload.success">Imagen subida exitosamente</string>
    <string name="title_activity_product_store">ActivityProductStore</string>
    <string name="item.product.count">Nombre:\n Cantida:</string>
    <string name="item.product.data">%s \n(x%s)</string>
    <string name="error.permission.denied">Lo siento, no tienes permiso para ver el inventario</string>
    <string name="error.server">Error en el servidor, Intente más tarde</string>
    <string name="error.remove">Lo siento, usted no tiene permiso de eliminar un producto.</string>
</resources>
